# AudioMoth

./: .gitignore  README.md  pyproject.toml
audiomoth/: __init__.py  audiomoth.py  utils.py
src/: audiomoth.py
